--- a/index.html
+++ b/index.html
@@ -1,36 +1,93 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="en" data-bs-theme="light">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="https://refilc.hu/image/brand/favicon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <title>Document</title>
+    <title>Órarend</title>
 
 </head>
-
+<!-- Készíette: Veller Árpád, Száraz Bálint Csaba -->
 <body>
     <style>
-        td,th {
-            text-align: center;
+        :root {
+            --szin: orangered;
         }
-        tbody th{
+
+        body {
+            transition: all 0.2s ease-in-out;
+            cursor:default;
+        }
+
+        td,
+        th {
+            text-align: center;
+            transition: all 0.2s ease-in-out;
+        }
+
+        td div p,
+        tbody tr th p {
+            color: var(--szin);
+        }
+
+        #gomb {
+            font-size: 15px;
+            margin-bottom: -5px;
+        }
+
+        #gomb:hover {
+            cursor: pointer;
+        }
+
+        tbody th {
             font-size: 20px;
         }
+
         td div p {
             font-size: 13px;
             text-align: right;
-            margin-top: 3px;
+            margin-top: 10px !important;
             font-weight: bold;
             margin-bottom: -5px;
         }
+
+        tbody tr th p {
+            margin-bottom: -5px;
+            font-size: 13px;
+            font-weight: lighter;
+        }
+
+        thead tr th {
+            font-size: 25px;
+        }
+
+        td:hover {
+            transform: scale(0.97);
+            transition: all 0.5s ease-in-out;
+            border-radius: 15px;
+            background-color: rgba(175, 175, 175, 0.701);
+
+        }
+
+        @media (max-width: 1024px) {
+            td div p {
+                text-align: center;
+            }
+
+            .row {
+                margin-left: 0 !important;
+            }
+        }
     </style>
-    <table class="table table-bordered">
+    <table class="table table-bordered" id="orarend" style="transform: scale(0); transition: all 0.5s ease-in-out;">
         <thead>
             <tr>
-                <th scope="col">#</th>
+                <th scope="col">
+                    <p id="gomb" onclick="sotetmod()">Mód<br><span id="icon">🌚</span></p>
+                </th>
                 <th scope="col">Hétfő</th>
                 <th scope="col">Kedd</th>
                 <th scope="col">Szerda</th>
@@ -40,202 +97,228 @@
         </thead>
         <tbody class="table-group-divider">
             <tr>
-                <th scope="row">0</th>
+                <th scope="row">
+                    <p>7:15</p>0<p>8:00</p>
+                </th>
                 <td>IKT projektmunka II.<br>
                     <div class="row col-12">
-                        <p class=" col-3  ">203</p>
-                        <p class=" col-9  "> Paár Norbert</p>
+                        <p class="col-lg-3">203</p>
+                        <p class="col-lg-9"> Paár Norbert</p>
                 </td>
                 <td></td>
                 <td>Testnevelés<br>
                     <div class="row col-12">
-                        <p class=" col-3  ">tornaterem</p>
-                        <p class=" col-9  "> Nagy Tibor</p>
+                        <p class="col-lg-3">tornaterem</p>
+                        <p class="col-lg-9"> Nagy Tibor</p>
                 </td>
                 <td>Matematika<br>
                     <div class="row col-12">
-                        <p class=" col-3  ">103</p>
-                        <p class=" col-9  "> Takácsné Menyhért Éva Judit</p>
+                        <p class="col-lg-3">103</p>
+                        <p class="col-lg-9"> Takácsné Menyhért Éva Judit</p>
                 </td>
                 <td>Történelem<br>
                     <div class="row col-12">
-                        <p class=" col-3  ">103</p>
-                        <p class=" col-9  "> Takács Gábor</p>
+                        <p class="col-lg-3">103</p>
+                        <p class="col-lg-9"> Takács Gábor</p>
                 </td>
             </tr>
             <tr>
-                <th scope="row">1</th>
+                <th scope="row">
+                    <p>8:00</p>1<p>8:45</p>
+                </th>
                 <td>IKT projektmunka II.<br>
                     <div class="row col-12">
-                        <p class=" col-3  ">203</p>
-                        <p class=" col-9  "> Paár Norbert</p>
+                        <p class="col-lg-3">203</p>
+                        <p class="col-lg-9"> Paár Norbert</p>
                 </td>
                 <td>Webprogramozás<br>
                     <div class="row col-12">
-                        <p class=" col-3  ">203</p>
-                        <p class=" col-9  "> Németh Bence</p>
+                        <p class="col-lg-3">203</p>
+                        <p class="col-lg-9"> Németh Bence</p>
                 </td>
                 <td>Testnevelés<br>
                     <div class="row col-12">
-                        <p class=" col-3  ">tornaterem</p>
-                        <p class=" col-9  "> Nagy Tibor</p>
+                        <p class="col-lg-3">tornaterem</p>
+                        <p class="col-lg-9"> Nagy Tibor</p>
                 </td>
                 <td>Matematika<br>
                     <div class="row col-12">
-                        <p class=" col-3  ">103</p>
-                        <p class=" col-9  "> Takácsné Menyhért Éva Judit</p>
+                        <p class="col-lg-3">103</p>
+                        <p class="col-lg-9"> Takácsné Menyhért Éva Judit</p>
                 </td>
                 <td>Angol nyelv<br>
                     <div class="row col-12">
-                        <p class=" col-3  ">212</p>
-                        <p class=" col-9  "> Almásiné Jobbágy Nóra Katalin</p>
+                        <p class="col-lg-3">212</p>
+                        <p class="col-lg-9"> Almásiné Jobbágy Nóra Katalin</p>
                 </td>
             </tr>
             <tr>
-                <th scope="row">2</th>
+                <th scope="row">
+                    <p>8:55</p>2<p>9:40</p>
+                </th>
                 <td>IKT projektmunka II.<br>
                     <div class="row col-12">
-                        <p class=" col-3  ">203</p>
-                        <p class=" col-9  "> Paár Norbert</p>
+                        <p class="col-lg-3">203</p>
+                        <p class="col-lg-9"> Paár Norbert</p>
                 </td>
                 <td>Webprogramozás<br>
                     <div class="row col-12">
-                        <p class=" col-3  ">203</p>
-                        <p class=" col-9  "> Németh Bence</p>
+                        <p class="col-lg-3">203</p>
+                        <p class="col-lg-9"> Németh Bence</p>
                 </td>
                 <td>Angol nyelv<br>
                     <div class="row col-12">
-                        <p class=" col-3  ">212</p>
-                        <p class=" col-9  "> Almásiné Jobbágy Nóra Katalin</p>
+                        <p class="col-lg-3">212</p>
+                        <p class="col-lg-9"> Almásiné Jobbágy Nóra Katalin</p>
                 </td>
                 <td>Osztályfőnöki<br>
                     <div class="row col-12">
-                        <p class=" col-3  ">103</p>
-                        <p class=" col-9  "> Takácsné Mehyhért Éva Judit Judit</p>
+                        <p class="col-lg-3">103</p>
+                        <p class="col-lg-9"> Takácsné Mehyhért Éva Judit</p>
                 </td>
                 <td>Matematika<br>
                     <div class="row col-12">
-                        <p class=" col-3  ">103</p>
-                        <p class=" col-9  "> Takácsné Menyhért Éva</p>
+                        <p class="col-lg-3">103</p>
+                        <p class="col-lg-9"> Takácsné Menyhért Éva Judit</p>
                 </td>
             </tr>
             <tr>
-                <th scope="row">3</th>
+                <th scope="row">
+                    <p>9:50</p>3<p>10:35</p>
+                </th>
                 <td>Szakmai angol<br>
                     <div class="row col-12">
-                        <p class=" col-3  ">212</p>
-                        <p class=" col-9  "> Almásiné Jobbágy Nóra Katalin</p>
+                        <p class="col-lg-3">212</p>
+                        <p class="col-lg-9"> Almásiné Jobbágy Nóra Katalin</p>
                 </td>
                 <td>Webprogramozás<br>
                     <div class="row col-12">
-                        <p class=" col-3  ">203</p>
-                        <p class=" col-9  "> Németh Bence</p>
+                        <p class="col-lg-3">203</p>
+                        <p class="col-lg-9"> Németh Bence</p>
                 </td>
                 <td>Angol nyelv<br>
                     <div class="row col-12">
-                        <p class=" col-3  ">212</p>
-                        <p class=" col-9  "> Almásiné Jobbágy Nóra Katalin</p>
+                        <p class="col-lg-3">212</p>
+                        <p class="col-lg-9"> Almásiné Jobbágy Nóra Katalin</p>
                 </td>
                 <td>Magyar nyelv és irodalom<br>
                     <div class="row col-12">
-                        <p class=" col-3  ">103</p>
-                        <p class=" col-9  "> Szalma Anna Mária</p>
+                        <p class="col-lg-3">103</p>
+                        <p class="col-lg-9"> Szalma Anna Mária</p>
                 </td>
                 <td>Matematika<br>
                     <div class="row col-12">
-                        <p class=" col-3  ">103</p>
-                        <p class=" col-9  "> Takácsné Menyhért Éva Judit</p>
+                        <p class="col-lg-3">103</p>
+                        <p class="col-lg-9"> Takácsné Menyhért Éva Judit</p>
                 </td>
             </tr>
             <tr>
-                <th scope="row">4</th>
+                <th scope="row">
+                    <p>10:45</p>4<p>11:30</p>
+                </th>
                 <td>Szakmai angol<br>
                     <div class="row col-12">
-                        <p class=" col-3  ">212</p>
-                        <p class=" col-9  "> Almásiné Jobbágy Nóra Katalin</p>
+                        <p class="col-lg-3">212</p>
+                        <p class="col-lg-9"> Almásiné Jobbágy Nóra Katalin</p>
                 </td>
                 <td>Asztali alkalmazások<br>
                     <div class="row col-12">
-                        <p class=" col-3  ">113</p>
-                        <p class=" col-9  "> Paár Norbert</p>
+                        <p class="col-lg-3">113</p>
+                        <p class="col-lg-9"> Paár Norbert</p>
                 </td>
                 <td>Történelem<br>
                     <div class="row col-12">
-                        <p class=" col-3  ">103</p>
-                        <p class=" col-9  "> Takács Gábor</p>
+                        <p class="col-lg-3">103</p>
+                        <p class="col-lg-9"> Takács Gábor</p>
                 </td>
                 <td>Magyar nyelv és irodalom<br>
                     <div class="row col-12">
-                        <p class=" col-3  ">103</p>
-                        <p class=" col-9  "> Szalma Anna Mária</p>
+                        <p class="col-lg-3">103</p>
+                        <p class="col-lg-9"> Szalma Anna Mária</p>
                 </td>
                 <td>Magyar nyelv és irodalom<br>
                     <div class="row col-12">
-                        <p class=" col-3  ">103</p>
-                        <p class=" col-9  "> Szalma Anna Mária</p>
+                        <p class="col-lg-3">103</p>
+                        <p class="col-lg-9"> Szalma Anna Mária</p>
                 </td>
             </tr>
             <tr>
-                <th scope="row">5</th>
+                <th scope="row">
+                    <p>11:40</p>5<p>12:25</p>
+                </th>
                 <td>Adatbázis-kezelés I.<br>
                     <div class="row col-12">
-                        <p class=" col-3  ">301</p>
-                        <p class=" col-9  "> Takács István</p>
+                        <p class="col-lg-3">301</p>
+                        <p class="col-lg-9"> Takács István</p>
                 </td>
                 <td>Asztali alkalmazások<br>
                     <div class="row col-12">
-                        <p class=" col-3  ">113</p>
-                        <p class=" col-9  "> Paár Norbert</p>
+                        <p class="col-lg-3">113</p>
+                        <p class="col-lg-9"> Paár Norbert</p>
                 </td>
                 <td>Állampolgári ismeret<br>
                     <div class="row col-12">
-                        <p class=" col-3  ">103</p>
-                        <p class=" col-9  "> Takács Gábor</p>
+                        <p class="col-lg-3">103</p>
+                        <p class="col-lg-9"> Takács Gábor</p>
                 </td>
                 <td>Angol nyelv<br>
                     <div class="row col-12">
-                        <p class=" col-3  ">114</p>
-                        <p class=" col-9  ">Almásiné Jobbágy Nóra Katalin</p>
+                        <p class="col-lg-3">114</p>
+                        <p class="col-lg-9">Almásiné Jobbágy Nóra Katalin</p>
                 </td>
                 <td>Testnevelés<br>
                     <div class="row col-12">
-                        <p class=" col-3  ">tornaterem</p>
-                        <p class=" col-9  "> Nagy Tibor</p>
+                        <p class="col-lg-3">tornaterem</p>
+                        <p class="col-lg-9"> Nagy Tibor</p>
                 </td>
             </tr>
             <tr>
-                <th scope="row">6</th>
+                <th scope="row">
+                    <p>12:45</p>6<p>13:30</p>
+                </th>
                 <td>Szoftvertesztelés<br>
                     <div class="row col-12">
-                        <p class=" col-3  ">203</p>
-                        <p class=" col-9  "> Szilágyi Bertalan</p>
+                        <p class="col-lg-3">203</p>
+                        <p class="col-lg-9"> Szilágyi Bertalan</p>
                 </td>
                 <td>Asztali alkalmazások<br>
                     <div class="row col-12">
-                        <p class=" col-3  ">113</p>
-                        <p class=" col-9  "> Paár Norbert</p>
+                        <p class="col-lg-3">113</p>
+                        <p class="col-lg-9"> Paár Norbert</p>
                 </td>
                 <td>Magyar nyelv és irodalom<br>
                     <div class="row col-12">
-                        <p class=" col-3  ">103</p>
-                        <p class=" col-9  "> Szalma Anna Mária</p>
+                        <p class="col-lg-3">103</p>
+                        <p class="col-lg-9"> Szalma Anna Mária</p>
                 </td>
                 <td></td>
                 <td></td>
             </tr>
             <tr>
-                <th scope="row">7</th>
+                <th scope="row">
+                    <p>13:35</p>7<p>14:20</p>
+                </th>
                 <td>Szoftvertesztelés<br>
                     <div class="row col-12">
-                        <p class=" col-3  ">203</p>
-                        <p class=" col-9  "> Szilágyi Bertalan</p>
+                        <p class="col-lg-3">203</p>
+                        <p class="col-lg-9"> Szilágyi Bertalan</p>
                 </td>
                 <td></td>
                 <td>Matematika<br>
                     <div class="row col-12">
-                        <p class=" col-3  ">103</p>
-                        <p class=" col-9  "> Takácsné Menyhért Éva Judit</p>
+                        <p class="col-lg-3">103</p>
+                        <p class="col-lg-9">Takácsné Menyhért Éva Judit</p>
                 </td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <th scope="row">
+                    <p>14:25</p>8<p>15:10</p>
+                </th>
+                <td></td>
+                <td></td>
+                <td></td>
                 <td></td>
                 <td></td>
             </tr>
@@ -244,6 +327,26 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
+    <script>
+        document.getElementById("orarend").style.transform = "scale(1)";
+        if (localStorage.getItem("theme") == "dark") {
+            document.documentElement.setAttribute('data-bs-theme', 'dark');
+            localStorage.setItem("theme", "dark");
+            document.getElementById("icon").innerText = "🌞";
+        }
+        function sotetmod() {
+            if (localStorage.getItem("theme") == "light") {
+                document.documentElement.setAttribute('data-bs-theme', 'dark');
+                localStorage.setItem("theme", "dark");
+                document.getElementById("icon").innerText = "🌞";
+            }
+            else {
+                document.documentElement.setAttribute('data-bs-theme', 'light');
+                localStorage.setItem("theme", "light");
+                document.getElementById("icon").innerText = "🌚";
+            }
+        }
+    </script>
 </body>
 
 </html>
